# ha-marstek-battery

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/: copilot-instructions.md  instructions.md
custom_components/marstek_battery/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  manifest.json  sensor.py  strings.json
custom_components/marstek_battery/translations/: en.json
documents/: marstek-device-open-api.txt
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py
