[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "marstek-battery"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "BLE", "C4", "SIM"]
